RESOLVED FIXED75322
"Fake" insertion mode in HTMLTreeBuilder doesn't do anything
https://bugs.webkit.org/show_bug.cgi?id=75322
Summary "Fake" insertion mode in HTMLTreeBuilder doesn't do anything
Adam Barth
Reported 2011-12-28 12:44:31 PST
"Fake" insertion mode in HTMLTreeBuilder doesn't do anything
Attachments
Patch (3.62 KB, patch)
2011-12-28 12:45 PST, Adam Barth
no flags
Adam Barth
Comment 1 2011-12-28 12:45:34 PST
WebKit Review Bot
Comment 2 2011-12-28 13:11:06 PST
Comment on attachment 120691 [details] Patch Clearing flags on attachment: 120691 Committed r103778: <http://trac.webkit.org/changeset/103778>
WebKit Review Bot
Comment 3 2011-12-28 13:11:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.