"Fake" insertion mode in HTMLTreeBuilder doesn't do anything https://bugs.webkit.org/show_bug.cgi?id=75322

Reviewed by Darin Adler.

This machinery isn't needed anymore now that we're using the new
foreign content hotness.

* html/parser/HTMLTreeBuilder.cpp:
* html/parser/HTMLTreeBuilder.h:
(WebCore::HTMLTreeBuilder::setInsertionMode):


Canonical link: https://commits.webkit.org/92079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103778 268f45cc-cd09-0410-ab3c-d52691b4dbfc